fix(api): allow bookmarking OpenAlex articles
